--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ body{
     align-items: center;
     min-height: 100vh;
 }
+@media screen and (min-width: 780px){
+    .container{
+        display: flex;
+    }
+}
 .loading{
     position: relative;
     display: flex;
